                               * new initialization of the velocity ( Vini = U(lower-Xini, upper-Xini) )
                               * new confinement of the velocity ( V[t+1] = -0.5 * V[t], when x[t+1] > x_max | x[t+1] < x_min )
                               * optional normalisation of parameter values
        
                            -) new 'normalise' parameter for the 'control' variable, in order to improve the performance when the search space is not 
                               a hypercube
                            -) argument 'method' now allows the following 2 new values: 'spso2007' and 'spso2011', which set the values of the PSO 
                               engine to the ones of the SPSO 2007 and SPSO 2011, respectively. 
                            -) argument 'method'. The old (default) value 'pso' was replaced by the new (default) value 'spso2011'
                            -) argument 'Vini.type' now allows the following 2 new values: 'random2011' and 'lhs2011', which set the initial velocity 
                               values for the particles to random values according to the equation specified in the SPSO 2011, with a uniform 
                               distribution or with a Latin-hypercube sampling, respectively.
                            -) argument 'Vini.type'. The old values 'random' and 'lhs' were replaced by 'random2007' and 'lhs2007', in order to make 
                               clear that it follows the equation described in SPSO 2007.
                            -) argument 'Vini.type', when missing its value depends on the value of the 'method' argument:
                               method == 'spso2007' => Vini.type='random2007' 
                               method != 'spso2007' => Vini.type='random2011'
                            -) argument 'npart', when missing its value depends on the value of the 'method' argument:
                               method == 'spso2007' => npart=10+2*[sqrt(n)] 